<resources>
    <string name="feature_search">feature_search</string>
    <string name="search_hint">Search for star wars character</string>
    <string name="retry">Retry</string>
    <string name="label_empty">Lets explore the Star Wars Universe</string>
    <string name="label_birth_year">Birth Year :</string>
    <string name="label_height">Height :</string>
    <string name="person_height">%scm or %sfeet</string>
    <string name="label_species">Species</string>
    <string name="label_name">Name :</string>
    <string name="label_language">Language :</string>
    <string name="label_population">Population :</string>
    <string name="label_films">Films</string>
    <string name="label_not_available">N/A</string>
</resources>